--- a/style.css
+++ b/style.css
@@ -24,20 +24,30 @@
 }
 
 .header{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
     grid-area: header; 
-    background-color: aqua;
+    background-color: #778899;
+    font-size: 35px;
+    color: #ffffff; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .sidebar{
+    display: grid; 
+    grid-template-rows: repeat(6, 1fr); 
     grid-area: sidebar; 
     width: 100%; 
     height: 100%;  
-    background-color: blue;
+    font-size: 25px; ;
+    align-items: center;
+    background-color: #C0C0C0;
 }
 
 .footer{
     grid-area: footer; 
-    background-color: cadetblue;
+    background-color: #778899;
 }
 
 .main__form{   
@@ -46,11 +56,15 @@
     grid-area: 1 / 1 / 3 / 3;  
     width: 100%; 
     height: 100%; 
+    background-color: #FFFAF0;
 }
 
 .main__gallery{   
-    background-color: coral;
+    display: grid; 
+    grid-template: repeat(8, 1fr) / repeat(8, 1fr); 
+    background-color: #FFF0F5;
     grid-area: 1 / 3/ 3 / 6; 
+    grid-gap: 10px; 
     width: 100%; 
     height: 100%; 
 }
@@ -83,4 +97,82 @@ input{
 .forma__button{
     grid-column: 2 / 4;
     height: 30px;  
+}
+
+.sidebar__nav1{
+    grid-row: 2/3; 
+    text-align: center;
+}
+
+.sidebar__nav2{
+    grid-row: 3/4; 
+    text-align: center;
+}
+
+.sidebar__nav3{
+    grid-row: 4/5; 
+    text-align: center;
+}
+
+.sidebar__nav4{
+    grid-row: 5/6; 
+    text-align: center;
+}
+
+.gallery__warrper1{
+    grid-column: 2 / 4; 
+    grid-row: 2 / 6; 
+}
+
+.gallery__warrper2{
+    grid-column: 4 / 6;  
+    grid-row: 2 / 4;  
+}
+
+.gallery__warrper3{
+    grid-column: 6 / 8; 
+    grid-row: 2 / 4;    
+}
+
+.gallery__warrper4{
+    grid-column: 4 / 8; 
+    grid-row: 4 / 6;
+}
+
+.gallery__warrper5{
+    grid-column: 2 / 3; 
+    grid-row: 7 / 8;
+}
+
+.gallery__warrper6{
+    grid-column: 3 / 4; 
+    grid-row: 7 / 8;
+}
+
+.gallery__warrper7{
+    grid-column: 4 / 5; 
+    grid-row: 7 / 8;
+    order: 1; 
+}
+
+.gallery__warrper8{
+    grid-column: 5 / 6; 
+    grid-row: 7 / 8;
+}
+
+.gallery__warrper9{
+    grid-column: 6 / 7; 
+    grid-row: 7 / 8;
+}
+
+.gallery__warrper10{
+    grid-column: 7 / 8; 
+    grid-row: 7 / 8;
+}
+
+.gallery__img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; 
 }
